--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "App\\Migrations\\": "config/Migrations"
+            "App\\Migrations\\": "config/Migrations",
+            "App\\Seeds\\": "config/Seeds"
         }
     },
     "autoload-dev": {
