--- a/.editorconfig
+++ b/.editorconfig
@@ -15,12 +15,16 @@ end_of_line = crlf
 
 [*.yml]
 indent_size = 2
+insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.twig]
 insert_final_newline = false
 
 [*.neon]
 indent_style = tab
+insert_final_newline = true
+trim_trailing_whitespace = true
 
 [Makefile]
 indent_style = tab
