--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "cakephp/cakephp-codesniffer": "^5.0",
         "cakephp/debug_kit": "^5.0.0",
         "josegonzalez/dotenv": "^4.0",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.1.0"
     },
     "suggest": {
