--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,10 @@
 parameters:
-    level: 8
-    treatPhpDocTypesAsCertain: false
-    checkGenericClassInNonGenericObjectType: false
-    paths:
-        - src/
-        - tests/
+	level: 8
+	treatPhpDocTypesAsCertain: false
+	checkGenericClassInNonGenericObjectType: false
+	bootstrapFiles:
+		- config/paths.php
+		- vendor/cakephp/cakephp/src/functions.php
+	paths:
+		- src/
+		- tests/
