--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 .Trashes
 # Icon must end with two \r
 Icon
+
 ehthumbs.db
 Thumbs.db
 .directory
@@ -51,3 +52,4 @@ nbproject/*
 yarn-debug.log
 yarn-error.log
 config/Migrations/schema-dump-default.lock
+testdb.sqlite
