Setup for json requests.

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "mobiledetect/mobiledetectlib": "^3.74"
     },
     "require-dev": {
+        "cakephp/cakephp": "5.x-dev as 5.0.1",
         "cakephp/bake": "^3.0.2",
         "cakephp/cakephp-codesniffer": "^5.1.1",
         "cakephp/debug_kit": "^5.0.1",
@@ -68,6 +69,7 @@
         "coverage-clover": "php -d memory_limit=-1 -d xdebug.mode=coverage ./vendor/bin/phpunit --coverage-clover=tmp/coverage.xml",
         "coverage-text": "php -d memory_limit=-1 -d xdebug.mode=coverage ./vendor/bin/phpunit --coverage-text --colors=never"
     },
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
         "platform-check": true,
