--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "cakephp/cakephp": "^5.0.0",
         "cakephp/migrations": "^4.1",
         "cakephp/plugin-installer": "^2.0.1",
+        "chillerlan/php-qrcode": "^4.3",
         "mobiledetect/mobiledetectlib": "^3.74"
     },
     "require-dev": {
