--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "cakephp/migrations": "^4.1",
         "cakephp/plugin-installer": "^2.0.1",
         "chillerlan/php-qrcode": "^4.3",
-        "mobiledetect/mobiledetectlib": "^3.74"
+        "mobiledetect/mobiledetectlib": "^3.74",
+        "paragonie/csp-builder": "^2.9"
     },
     "require-dev": {
         "cakephp/cakephp": "5.x-dev as 5.0.1",
