--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -21,7 +21,7 @@ jobs:
   build:
     runs-on: "ubuntu-latest"
     permissions:
-      contents: read
+      contents: write
       issues: write
     steps:
       - uses: "actions/checkout@v3"
