--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
         "cs-checkstyle": "@cs-check -- --report=checkstyle",
         "phpstan": "php -d memory_limit=-1 ./vendor/bin/phpstan --no-progress -vvv",
         "phpstan-github": "php -d memory_limit=-1 ./vendor/bin/phpstan --no-progress -vvv --error-format=github",
-        "coverage": "php -d memory_limit=-1 -d xdebug.mode=coverage ./vendor/bin/phpunit --coverage-html tmp/coverage",
+        "coverage": "php -d memory_limit=-1 -d xdebug.mode=coverage ./vendor/bin/phpunit --coverage-html tmp/coverage --coverage-clover=tmp/cov.xml",
         "coverage-clover": "php -d memory_limit=-1 -d xdebug.mode=coverage ./vendor/bin/phpunit --coverage-clover=tmp/coverage.xml",
         "coverage-text": "php -d memory_limit=-1 -d xdebug.mode=coverage ./vendor/bin/phpunit --coverage-text --colors=never"
     },
