--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "cakephp/migrations": "~4.1",
         "cakephp/plugin-installer": "~2.0",
         "chillerlan/php-qrcode": "~4.3",
+        "friendsofcake/bootstrap-ui": "^5.0",
         "mobiledetect/mobiledetectlib": "~3.74",
         "paragonie/csp-builder": "~2.9"
     },
