--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "cakephp/plugin-installer": "~2.0",
         "chillerlan/php-qrcode": "~4.3",
         "friendsofcake/bootstrap-ui": "^5.0",
+        "friendsofcake/search": "^7.0",
         "mobiledetect/mobiledetectlib": "~3.74",
         "paragonie/csp-builder": "~2.9"
     },
