--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -3,6 +3,11 @@ name: "Run TODO to Issue"
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - '*'
   workflow_dispatch:
     inputs:
       MANUAL_COMMIT_REF:
