--- a/composer.json
+++ b/composer.json
@@ -55,14 +55,14 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "App\\Migrations\\": "config/Migrations",
-            "App\\Test\\Fixture\\": "tests/Fixture"
+            "App\\Migrations\\": "config/Migrations"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "App\\Test\\": "tests/",
-            "Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
+            "Cake\\Test\\": "vendor/cakephp/cakephp/tests",
+            "App\\Test\\Fixture\\": "tests/Fixture"
         }
     },
     "scripts": {
