--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
         script_stop: true
         envs: DEPLOY_SSH_PATH
         script: |
-          echo "$DEPLOY_SSH_PATH"
           cd $DEPLOY_SSH_PATH
+          pwd
           git fetch origin
           git checkout production
           git pull
