--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "cakephp/migrations": "~4.1",
         "cakephp/plugin-installer": "~2.0",
         "chillerlan/php-qrcode": "dev-main",
-        "fr3nch13/cakephp-stats": "^0.1.0",
+        "fr3nch13/cakephp-stats": "~0.1",
         "friendsofcake/bootstrap-ui": "^5.0",
         "friendsofcake/search": "^7.0",
         "mobiledetect/mobiledetectlib": "~4.8",
