--- a/composer.json
+++ b/composer.json
@@ -61,8 +61,8 @@
     "autoload-dev": {
         "psr-4": {
             "App\\Test\\": "tests/",
-            "Cake\\Test\\": "vendor/cakephp/cakephp/tests",
-            "App\\Test\\Fixture\\": "tests/Fixture"
+            "App\\Test\\Fixture\\": "tests/Fixture",
+            "Cake\\Test\\": "vendor/cakephp/cakephp/tests"
         }
     },
     "scripts": {
@@ -103,9 +103,9 @@
         "sort-packages": true,
         "allow-plugins": {
             "cakephp/plugin-installer": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true,
-            "composer/installers": true,
-            "oomphinc/composer-installers-extender": true
+            "dealerdirect/phpcodesniffer-composer-installer": false,
+            "oomphinc/composer-installers-extender": true,
+            "composer/installers": false
         }
     },
     "extra": {
