--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "cakephp/cakephp": "^5.0.3",
         "cakephp/migrations": "^4.1.1",
         "cakephp/plugin-installer": "^2.0.1",
-        "chillerlan/php-qrcode": "dev-main",
+        "chillerlan/php-qrcode": "~5.0",
         "fr3nch13/cakephp-stats": "^0.3",
         "friendsofcake/bootstrap-ui": "^5.0.1",
         "friendsofcake/search": "^7.0",
