--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "php": ">=8.1",
         "cakephp/authentication": "^3.0.3",
         "cakephp/authorization": "^3.1.1",
-        "cakephp/cakephp": "^5.0.3",
+        "cakephp/cakephp": "5.0.4",
         "cakephp/migrations": "^4.1.1",
         "cakephp/plugin-installer": "^2.0.1",
         "chillerlan/php-qrcode": "~5.0",
