--- a/composer.json
+++ b/composer.json
@@ -19,32 +19,32 @@
     "require": {
         "php": ">=8.1",
         "cakephp/authentication": "^3.0.3",
-        "cakephp/authorization": "^3.1.1",
+        "cakephp/authorization": "^3.1.2",
         "cakephp/cakephp": "5.0.4",
-        "cakephp/migrations": "^4.1.1",
+        "cakephp/migrations": "^4.2.0",
         "cakephp/plugin-installer": "^2.0.1",
-        "chillerlan/php-qrcode": "~5.0",
+        "chillerlan/php-qrcode": "^5.0.2",
         "fr3nch13/cakephp-stats": "^0.3",
         "friendsofcake/bootstrap-ui": "^5.0.1",
-        "friendsofcake/search": "^7.0",
-        "mobiledetect/mobiledetectlib": "^4.8.04",
-        "npm-asset/bootstrap-fileinput": "^5.5.2",
-        "npm-asset/bootstrap-icons": "^1.11.2",
-        "npm-asset/bootstrap5-tags": "^1.6.11",
+        "friendsofcake/search": "^7.1",
+        "mobiledetect/mobiledetectlib": "^4.8.06",
+        "npm-asset/bootstrap-fileinput": "^5.5.4",
+        "npm-asset/bootstrap-icons": "^1.11.3",
+        "npm-asset/bootstrap5-tags": "^1.7.1",
         "npm-asset/jquery": "^3.7.1",
         "npm-asset/piexifjs": "^1.0.6",
-        "npm-asset/sortablejs": "^1.15",
+        "npm-asset/sortablejs": "^1.15.2",
         "oomphinc/composer-installers-extender": "^2.0.1",
         "paragonie/csp-builder": "~3.0",
         "robmorgan/phinx": "~0.15.5"
     },
     "require-dev": {
-        "cakephp/bake": "^3.0.4",
+        "cakephp/bake": "^3.1.1",
         "cakephp/cakephp-codesniffer": "^5.1.1",
-        "cakephp/debug_kit": "^5.0.4",
+        "cakephp/debug_kit": "^5.0.6",
         "josegonzalez/dotenv": "~4.0",
-        "phpstan/phpstan": "^1.10.50",
-        "phpunit/phpunit": "^10.5.3",
+        "phpstan/phpstan": "^1.10.66",
+        "phpunit/phpunit": "^10.5.18",
         "rexxars/html-validator": "^2.3"
     },
     "suggest": {
